<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:id="@+id/rootLayout"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="167dp"
        android:layout_height="35dp"
        android:text="TextView"
        style="@style/customText"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/borrowImg"
        android:layout_width="156dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        tools:srcCompat="@tools:sample/avatars" />

    <SeekBar
        android:id="@+id/rent"
        style="@style/CustomSeekBar"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:max="4"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <TextView
        android:id="@+id/description"
        style="@style/customDesc"
        android:textSize="17.5sp"
        android:layout_width="244dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/rent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/save"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:text="@string/save"
        style="@style/saveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="109dp"
        android:layout_height="77dp"
        android:text="@string/cancel"
        style="@style/cancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rent"
        app:layout_constraintVertical_bias="0.69" />

    <CheckBox
        android:id="@+id/termsCheck"
        android:layout_width="205dp"
        android:layout_height="58dp"
        android:text="@string/Terms"
        style="@style/customDesc"
        android:buttonTint="@color/blue1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <CheckBox
        android:id="@+id/privacyCheck"
        android:layout_width="158dp"
        android:layout_height="57dp"
        android:text="@string/Privacy"
        style="@style/customDesc"
        android:buttonTint="@color/blue1"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/borrowCredit"
        style="@style/customCreditText"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/rentTime"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:text="TextView"
        android:textAlignment="center"
        style="@style/customDesc"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/termsCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/recharge"
        android:layout_width="249dp"
        android:layout_height="254dp"
        android:background="@color/purple_700"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="35dp"
        android:text="@string/recharge"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/rechargeY"
        style="@style/saveBtn"
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:text="@string/rechargeY"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rent"
        app:layout_constraintEnd_toEndOf="@+id/recharge"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="@+id/recharge"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/rechargeN"
        style="@style/cancelBtn"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:text="@string/rechargeN"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rent"
        app:layout_constraintEnd_toStartOf="@+id/rechargeY"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="@+id/recharge"
        app:layout_constraintTop_toTopOf="@+id/recharge"
        app:layout_constraintVertical_bias="0.836" />

    <TextView
        android:id="@+id/rentText"
        android:layout_width="111dp"
        android:layout_height="33dp"
        android:text="@string/rentTime"
        style="@style/customDesc"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.051" />

</androidx.constraintlayout.widget.ConstraintLayout>